<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/nexafit_icono"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:contentDescription="Foto de perfil"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/profilePhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- EMAIL -->
        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="36dp"
            android:hint="@string/email"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#777777"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toBottomOf="@id/titleLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- PASSWORD con ojito -->
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:background="@drawable/bg_input"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#777777"
            android:textCursorDrawable="@null"
            android:drawableEnd="@drawable/ic_eye"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidado_contraseña"
            android:textColor="?attr/colorPrimary"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintEnd_toEndOf="@id/passwordInput"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_button"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/goRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_register"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>